intear-dex-management/tests/snapshots/dex_lifecycle__dex_call_of_swap.snap
---
source: intear-dex-management/tests/dex_lifecycle.rs
expression: "cli.transaction(\"alice.near\",\n&[\"dex\", \"call\", \"alice.near\", \"slimedragon.near/xyk\", \"swap\", \"\"]).await"
---
$ near-intear-dex-management dex call alice.near slimedragon.near/xyk swap '' network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management dex call alice.near slimedragon.near/xyk swap '' network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send

Error:
   0: The swap method of dexes is only for swaps, which dex call doesn't make
