intear-dex-management/tests/snapshots/dex_lifecycle__dex_storage_deposit.snap
---
source: intear-dex-management/tests/dex_lifecycle.rs
expression: "cli.transaction(\"alice.near\",\n&[\"dex\", \"storage\", \"deposit\", \"alice.near\", \"slimedragon.near/xyk\",\n\"0.5 NEAR\"]).await"
---
$ near-intear-dex-management dex storage deposit alice.near slimedragon.near/xyk '0.5 NEAR' network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
exit code: 0
--- stdout ---
{
  "total": "20515910000000000000000000",
  "available": "18927010000000000000000000"
}
--- stderr ---
├  sandbox · signer alice.near · dex.intear.near
│  Deposit 0.5 NEAR into slimedragon.near/xyk's storage balance on dex.intear.near
│  Actions: dex_storage_deposit (0.5 NEAR, 10 Tgas)
├  Unsigned transaction:
│    signer_id:    alice.near
│    receiver_id:  dex.intear.near
│    actions:
│       -- function call:
│                       method name:  dex_storage_deposit
│                       args:         {
│                                       "dex_id": "slimedragon.near/xyk"
│                                     }
│                       gas:          10.0 Tgas
│                       deposit:      0.5 NEAR
│
├  Your transaction was signed successfully.
│    Public key: ed25519:[HASH]
│    Signature:  ed25519:[SIGNATURE]
│
├  Transaction Execution Info:
│    Gas burned: [GAS]
│    Transaction fee: [FEE]
│    Transaction ID: [HASH]
│    To see the transaction in the transaction explorer, please open this url in your browser:
│    http://[SANDBOX RPC]/transactions/[HASH]
│
├  Function execution logs:
│    Logs [dex.intear.near]:   No logs
│    Logs [alice.near]:   No logs
│

Function execution return value (printed to stdout):


The "dex_storage_deposit" call to <dex.intear.near> on behalf of <alice.near> succeeded.

├  ✓ Deposited 0.5 NEAR into slimedragon.near/xyk's storage balance on dex.intear.near


Here is your console command if you need to script it or re-run:
    near intear-dex-management dex storage deposit alice.near slimedragon.near/xyk '0.5 NEAR' network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
