intear-dex-management/tests/snapshots/dex_lifecycle__dex_storage_deposit_for_missing_dex_of_another_deployer.snap
---
source: intear-dex-management/tests/dex_lifecycle.rs
expression: "cli.transaction(\"alice.near\",\n&[\"dex\", \"storage\", \"deposit\", \"alice.near\", \"slimedragon.near/xykk\",\n\"1 NEAR\"]).await"
---
$ near-intear-dex-management dex storage deposit alice.near slimedragon.near/xykk '1 NEAR' network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management dex storage deposit alice.near slimedragon.near/xykk '1 NEAR' network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send

Error:
   0: Dex slimedragon.near/xykk doesn't exist on dex.intear.near (network sandbox)

Suggestion: Check the dex id, or choose a connection to the network it's on
