intear-dex-management/tests/snapshots/dex_lifecycle__dex_storage_show.snap
---
source: intear-dex-management/tests/dex_lifecycle.rs
expression: "cli.view(&[\"dex\", \"storage\", \"show\", \"slimedragon.near/xyk\"])"
---
$ near-intear-dex-management dex storage show slimedragon.near/xyk network-config sandbox now
exit code: 0
--- stdout ---
Code       deployed
Total      20.01591 NEAR
Used       1.59179 NEAR
Available  18.42412 NEAR
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management dex storage show slimedragon.near/xyk network-config sandbox now
