intear-dex-management/tests/snapshots/dex_lifecycle__dex_storage_withdraw.snap
---
source: intear-dex-management/tests/dex_lifecycle.rs
expression: "cli.transaction(\"slimedragon.near\",\n&[\"dex\", \"storage\", \"withdraw\", \"slimedragon.near\", \"slimedragon.near/xyk\",\n\"0.5 NEAR\"]).await"
---
$ near-intear-dex-management dex storage withdraw slimedragon.near slimedragon.near/xyk '0.5 NEAR' network-config sandbox sign-with-plaintext-private-key ed25519:3Jr44c7TzFcexmD2nYX7qD5Vm8td8GdDqTK4MvRKi6mCijP254c7sRtTvYDLF3kngAuBosWUkGokz1qYLZSkNyrn send
exit code: 0
--- stdout ---
{
  "total": "20015910000000000000000000",
  "available": "18427010000000000000000000"
}
--- stderr ---
├  sandbox · signer slimedragon.near · dex.intear.near
│  Withdraw 0.5 NEAR of slimedragon.near/xyk's storage balance on dex.intear.near to slimedragon.near's wallet
│  Actions: dex_storage_withdraw (1 yoctoNEAR, 10 Tgas)
├  Unsigned transaction:
│    signer_id:    slimedragon.near
│    receiver_id:  dex.intear.near
│    actions:
│       -- function call:
│                       method name:  dex_storage_withdraw
│                       args:         {
│                                       "dex_id": "slimedragon.near/xyk",
│                                       "amount": "500000000000000000000000"
│                                     }
│                       gas:          10.0 Tgas
│                       deposit:      1 yoctoNEAR
│
├  Your transaction was signed successfully.
│    Public key: ed25519:[HASH]
│    Signature:  ed25519:[SIGNATURE]
│
├  Transaction Execution Info:
│    Gas burned: [GAS]
│    Transaction fee: [FEE]
│    Transaction ID: [HASH]
│    To see the transaction in the transaction explorer, please open this url in your browser:
│    http://[SANDBOX RPC]/transactions/[HASH]
│
├  Function execution logs:
│    Logs [dex.intear.near]:   No logs
│    Logs [slimedragon.near]:   No logs
│    Logs [slimedragon.near]:   No logs
│    Logs [slimedragon.near]:   No logs
│

Function execution return value (printed to stdout):


The "dex_storage_withdraw" call to <dex.intear.near> on behalf of <slimedragon.near> succeeded.

├  ✓ Withdrew 0.5 NEAR of slimedragon.near/xyk's storage balance on dex.intear.near to slimedragon.near's wallet


Here is your console command if you need to script it or re-run:
    near intear-dex-management dex storage withdraw slimedragon.near slimedragon.near/xyk '0.5 NEAR' network-config sandbox sign-with-plaintext-private-key ed25519:3Jr44c7TzFcexmD2nYX7qD5Vm8td8GdDqTK4MvRKi6mCijP254c7sRtTvYDLF3kngAuBosWUkGokz1qYLZSkNyrn send
