intear-dex-management/tests/snapshots/dex_lifecycle__dex_storage_withdraw_by_account_other_than_deployer.snap
---
source: intear-dex-management/tests/dex_lifecycle.rs
expression: "cli.transaction(\"alice.near\",\n&[\"dex\", \"storage\", \"withdraw\", \"alice.near\", \"slimedragon.near/xyk\",\n\"all\"]).await"
---
$ near-intear-dex-management dex storage withdraw alice.near slimedragon.near/xyk all network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management dex storage withdraw alice.near slimedragon.near/xyk all network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send

Error:
   0: Only slimedragon.near, which deployed slimedragon.near/xyk, can withdraw its storage balance
