intear-dex-management/tests/snapshots/dex_lifecycle__xyk_deploy_by_account_other_than_trusted_code_deployer.snap
---
source: intear-dex-management/tests/dex_lifecycle.rs
expression: "without_code_size(cli.transaction(\"alice.near\",\n&[\"xyk\", \"deploy\", \"alice.near\", \"use-file\",\nxyk_wasm_path]).await).replace(xyk_wasm_path, \"[TEMP]/xyk_dex.wasm\")"
---
$ near-intear-dex-management xyk deploy alice.near use-file [TEMP]/xyk_dex.wasm network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk deploy alice.near use-file [TEMP]/xyk_dex.wasm network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send

Error:
   0: alice.near can't deploy dex code: dex.intear.near only takes code from its trusted code deployer, slimedragon.near

Suggestion: Sign with slimedragon.near
